--- a/_nav.scss
+++ b/_nav.scss
@@ -3,6 +3,7 @@
 .nav-bar {
     text-align: center;
     font-family: $secondary-font;
+    color: $text-color-secondary;
     height: 3rem;
     margin: 3rem 9rem;
     display: none;
@@ -35,6 +36,7 @@
             justify-content: center;
             align-items: center;
             font-size: 1.5rem;
+            color: $text-color-secondary;
         }
 
         .nav-bar__home:hover,
