--- a/_skills.scss
+++ b/_skills.scss
@@ -8,6 +8,7 @@
         text-align: center;
         padding: 1rem;
     }
+
     .skills__intro {
         color: $text-color-secondary;
         font-family: $secondary-font;
@@ -15,6 +16,7 @@
         text-align: center;
         padding: 1rem;
     }
+
     .skills__container {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -27,7 +29,7 @@
             text-align: center;
 
         }
-    
+
         img {
             width: 3rem;
             display: block;
@@ -38,30 +40,39 @@
     }
 
 
-@media screen and (min-width: 1024px) {
-    
+    @media screen and (min-width: 1024px) {
+
         display: unset;
+
         .skills__title {
             font-size: 3rem;
             text-align: center;
         }
+
         .skills__intro {
-            font-size: 1rem;
-            width: 30.25rem;
+            font-size: 1.2rem;
+            width: 35rem;
             margin: auto;
-            
+
         }
+
         .skills__container {
             display: flex;
             flex: auto;
-            justify-content: center;
+            justify-content: space-around;
             align-items: flex-end;
             gap: 1.5rem;
-            
+            margin: 0 25rem;
+            padding: 0;
+
+            p {
+                font-size: 1.5rem;
+            }
+
 
         }
-        
+
     }
-    
+
 
 }
