--- a/_header.scss
+++ b/_header.scss
@@ -19,6 +19,10 @@
         padding: 1rem;
     }
 
+    .intro__button {
+        display: none;
+    }
+
     .intro__image {
         display: none;
 
@@ -90,6 +94,23 @@
             text-align: center;
             width: 70rem;
             padding: 2rem;
+        }
+
+        .intro__button {
+            display: unset;
+            background-color: white;
+            color: black;
+            font-size: 1.5rem;
+            padding: 0.8rem;
+            font-family: $primary-font;
+            text-decoration: none;
+            text-align: center;
+            border-style: solid;
+            border-color: $text-color;
+            border-width: 0.2rem;
+            border-radius: 0.8rem;
+            margin: 2rem;
+            box-shadow: 0.2rem 0.2rem 0.2rem 0.2rem $text-color;
         }
     }
 }
