--- a/_variables.scss
+++ b/_variables.scss
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Hind:wght@300&family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300&family=Manrope:wght@600&family=Montserrat&display=swap');
 
 $text-color: #119539;
 $text-color-secondary: rgb(47, 47, 47);
 $text-color-tertiary: white;
-$primary-font: 'Montserrat', sans-serif;
+$primary-font: 'Manrope', sans-serif;
 $secondary-font: 'Hind', sans-serif;
 $background-color: white;
 $foreground-color: #dbf3e3;
-
