--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Hind:wght@300&family=Montserrat&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Hind:wght@300&family=Manrope:wght@600&family=Montserrat&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Manrope", sans-serif;
   font-size: 15px;
   padding: 2px;
 }
@@ -65,7 +66,7 @@
   }
 }
 .about .about__title {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Manrope", sans-serif;
   color: #119539;
   font-size: 2rem;
   padding: 1rem;
@@ -109,7 +110,7 @@
   }
 }
 .skills .skills__title {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Manrope", sans-serif;
   font-size: 2rem;
   color: #119539;
   text-align: center;
@@ -173,7 +174,7 @@
 }
 
 .projects .projects__title {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Manrope", sans-serif;
   color: #119539;
   text-align: center;
   font-size: 2rem;
@@ -199,12 +200,12 @@
 
 .card__image-descriptor {
   font-size: 1rem;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Manrope", sans-serif;
 }
 
 .card__header {
   font-size: 2rem;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Manrope", sans-serif;
   color: #119539;
 }
 
@@ -219,7 +220,7 @@
 .card__button--secondary {
   font-size: 1.25rem;
   font-weight: bold;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Manrope", sans-serif;
   color: #119539;
   text-align: start;
   background-color: white;
@@ -297,17 +298,20 @@
 }
 .intro .intro__name {
   text-align: left;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Manrope", sans-serif;
   font-size: 1.25rem;
   color: rgb(47, 47, 47);
   padding: 1rem;
 }
 .intro .intro__occupation {
   text-align: left;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Manrope", sans-serif;
   font-size: 3rem;
   color: #119539;
   padding: 1rem;
+}
+.intro .intro__button {
+  display: none;
 }
 .intro .intro__image {
   display: none;
@@ -337,6 +341,22 @@
     width: 70rem;
     padding: 2rem;
   }
+  .intro .intro__button {
+    display: unset;
+    background-color: white;
+    color: black;
+    font-size: 1.5rem;
+    padding: 0.8rem;
+    font-family: "Manrope", sans-serif;
+    text-decoration: none;
+    text-align: center;
+    border-style: solid;
+    border-color: #119539;
+    border-width: 0.2rem;
+    border-radius: 0.8rem;
+    margin: 2rem;
+    box-shadow: 0.2rem 0.2rem 0.2rem 0.2rem #119539;
+  }
 }
 .footer {
   width: 100vw;
@@ -351,7 +371,7 @@
   align-items: center;
 }
 .footer .footer__email {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Manrope", sans-serif;
   color: white;
   font-size: 1rem;
   text-align: center;
