--- a/_variables.scss
+++ b/_variables.scss
@@ -5,6 +5,7 @@
 $text-color: #119539;
 $text-color-secondary: rgb(47, 47, 47);
 $text-color-tertiary: white;
+$text-color-darker: #08471b;
 $primary-font: 'Manrope', sans-serif;
 $secondary-font: 'Hind', sans-serif;
 $background-color: white;
