--- a/style.css
+++ b/style.css
@@ -330,7 +330,7 @@
     align-items: center;
     margin: auto;
     width: 100rem;
-    height: 45rem;
+    height: 50rem;
     background-color: #dbf3e3;
     text-align: center;
   }
@@ -345,6 +345,10 @@
     text-align: center;
     width: 70rem;
     padding: 2rem;
+  }
+  .intro .intro__occupation .intro__occupation--emphasis {
+    font-size: 4rem;
+    font-style: italic;
   }
   .intro .intro__button {
     display: unset;
@@ -361,6 +365,10 @@
     border-radius: 0.8rem;
     margin: 2rem;
     box-shadow: 0.2rem 0.2rem 0.2rem 0.2rem #119539;
+  }
+  .intro .intro__button:hover {
+    border-color: #08471b;
+    box-shadow: 0.2rem 0.2rem 0.2rem 0.2rem #08471b;
   }
 }
 .footer {
